# Peaceful

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_peace.txt
peaceful/: __init__.py  __main__.py
peaceful/cli/: __init__.py  main.py
peaceful/converters/: __init__.py  easyeffects.py
peaceful/integrations/: __init__.py  easyeffects_paths.py  easyeffects_reload.py
peaceful/models/: __init__.py  preset.py
peaceful/parser/: __init__.py  peace.py
peaceful/viz/: __init__.py  realtime.py  response.py
